; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/system/extr_exception_handler.c_setup_os_exceptions.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/system/extr_exception_handler.c_setup_os_exceptions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@exception_msgbuf = common dso_local global i32 0, align 4
@OS_EXCEPTION_TYPE_DSI = common dso_local global i32 0, align 4
@exception_dsi_cb = common dso_local global i32 0, align 4
@OS_EXCEPTION_TYPE_ISI = common dso_local global i32 0, align 4
@exception_isi_cb = common dso_local global i32 0, align 4
@OS_EXCEPTION_TYPE_PROGRAM = common dso_local global i32 0, align 4
@exception_prog_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setup_os_exceptions() #0 {
  %1 = call i32 @malloc(i32 4096)
  store i32 %1, i32* @exception_msgbuf, align 4
  %2 = load i32, i32* @OS_EXCEPTION_TYPE_DSI, align 4
  %3 = load i32, i32* @exception_dsi_cb, align 4
  %4 = call i32 @OSSetExceptionCallback(i32 %2, i32 %3)
  %5 = load i32, i32* @OS_EXCEPTION_TYPE_ISI, align 4
  %6 = load i32, i32* @exception_isi_cb, align 4
  %7 = call i32 @OSSetExceptionCallback(i32 %5, i32 %6)
  %8 = load i32, i32* @OS_EXCEPTION_TYPE_PROGRAM, align 4
  %9 = load i32, i32* @exception_prog_cb, align 4
  %10 = call i32 @OSSetExceptionCallback(i32 %8, i32 %9)
  %11 = call i32 (...) @test_os_exceptions()
  ret void
}

declare dso_local i32 @malloc(i32) #1

declare dso_local i32 @OSSetExceptionCallback(i32, i32) #1

declare dso_local i32 @test_os_exceptions(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
